--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ben_week01</title>
 
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
     <div class="wrapper">
@@ -75,6 +75,6 @@
         </section>
     </div>  
     
-    <script src="/js/index.js"></script>
+    <script src="../js/index.js"></script>
 </body>
 </html>
