--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                 </div>
             </div>
         </section>
+        <footer></footer>
     </div>  
     
     <script src="./js/index.js"></script>
